<?xml version="1.0"?>
<package>
  <name>gen3_bringup</name>
  <version>0.4.8</version>
  <description>Canvas Gen3 Simulator bringup</description>

  <author email="rgariepy@clearpathrobotics.com">Ryan Gariepy</author>
  <author email="pmukherj@clearpathrobotics.com">Prasenjit Mukherjee</author>
  <author email="paul@bovbel.com">Paul Bovbel</author>
  <author email="dash@clearpathrobotics.com">Devon Ash</author>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/husky_gazebo</url>
  <url type="bugtracker">https://github.com/husky/husky_simulator/issues</url>
  <url type="repository">https://github.com/husky/husky_simulator</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gen3_description</run_depend>
  <run_depend>gen3_control</run_depend>
  <run_depend>gen3_gazebo</run_depend>
  <run_depend>rostopic</run_depend>
  <export>
  </export>
</package>
